:bug: fix hamburger not working on ios tap

--- a/gnmproj/apps/omelcheddotdev/static/omelcheddotdev/css/base.css
+++ b/gnmproj/apps/omelcheddotdev/static/omelcheddotdev/css/base.css
@@ -106,7 +106,7 @@ body {
 .dropdown {
     position: relative;
     display: inline-block;
-    cursor: pointer
+    cursor: pointer;
 }
 
 .dropdown:hover .dropdown__trigger {
